Update email-based authentication and environment setup
Replaced username with email for user authentication to improve login functionality. Updated `.env` files, API endpoints, and `docker-compose` to reflect changes, along with minor dependency additions (e.g., `react-refresh`). Adjusted configurations to ensure compatibility with updated database URLs and deployment environments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --reload
 
     environment:
-      - DATABASE_URL=mysql+pymysql://dani:1234@db:3306/usuarios
+      - DATABASE_URL=mysql+pymysql://dani:1234@db_portegueando:3306/usuarios
       - SECRET_KEY=e8f2a9b1c7d6508a4f3e2d1b7c9a6f0d5e3b2a8c7f6d5e0b9a8c7f6d5e4b3a2c1
     depends_on:
       - db_portegueando
@@ -42,6 +42,8 @@ services:
       - ./src:/app/src  # Para desarrollo en tiempo real
     environment:
       - NODE_ENV=development
+    depends_on:
+      - db_portegueando
     # Asegúrate de que este comando mantenga el contenedor activo
     command: npm run dev -- --host 0.0.0.0
 
