--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,14 @@ services:
     # Asegúrate de que este comando mantenga el contenedor activo
     command: npm run dev -- --host 0.0.0.0
 
-
+  metabase:
+    image: cristhian999/proyecto_de_grado
+    ports:
+      - "3000:3000"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    depends_on:
+      - db_portegueando
 
 networks:
   app-network:
